refactor(core): 优化代码简洁性与异步执行效率
- 替换 AbstractNoteCountAggregationConsumer 中流式聚合为显式循环，提升可读性和空值安全
- 删除 AddUserId2HeaderFilter 中无用的 null 判断，简化请求头添加逻辑
- 优化 AuthServiceImpl 中角色权限会话设置，避免重复判断，提升代码清晰度
- 重构 Comment2DBConsumer 中权限校验流程，避免重复构造请求对象，改用集合过滤分离有效与无权限评论
- 改写 CommentChangedLocalHandler 中一级评论分组逻辑，使用显式循环替代流式收集
- 调整 CommentServiceImpl 中用户信息映射，添加空安全操作，规范 Redis Hash 操作，改进流处理
- 优化 FeedServiceImpl 中发现页缓存读取流程，合并 try-catch，清晰锁获取与缓存重建逻辑，新增私有方法获取首张封面图
- 统一 CountServiceImpl UserCountServiceImpl 等中数据库查询返回空列表处理，避免空指针，使用安全收集操作
- 重构 NoteInteractionCacheService 缓存保证逻辑，抽象通用缓存确保函数，减少重复代码
- 优化 NoteServiceImpl 异步并发查询作者信息和正文，精简映射构建过程，改进计数赋值逻辑保证空安全
- 调整 RelationServiceImpl 中用户计数映射赋值，统一空值默认，保证返回结构完整
- 统一 UserCountServiceImpl 缓存写入中空值判断与默认值填充，简化并保证 Redis 操作安全
- UserNoteListService 中补充获取笔记封面私有方法，确保封面获取逻辑复用与一致性